# course

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy-staging.yml
apps/api/: pyproject.toml  requirements.txt
apps/api/app/: main.py  worker.py
apps/api/app/api/v1/: admin.py  auth.py  blog.py  checkout.py  contact.py  courses.py  progress.py  reviews.py  stream.py  subscriptions.py  webhooks.py
apps/api/app/core/: config.py  deps.py  rate_limit.py  security.py
apps/api/app/db/: mongodb.py
apps/api/app/middleware/: admin_guard.py  auth_middleware.py
apps/api/app/models/: __init__.py  contact.py  coupon.py  course.py  order.py  progress.py  subscription.py  user.py
apps/api/app/services/: ai.py  cache.py  drive.py  email.py  otp.py  payment.py  watermark.py
apps/api/app/worker/: __init__.py  scheduler.py
apps/api/app/worker/jobs/: analytics_aggregation.py  forecast_jobs.py  renewal_reminders.py
apps/api/tests/: conftest.py  test_auth.py  test_checkout.py  test_courses.py  test_stream.py
apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  not-found.tsx  robots.ts  sitemap.ts
apps/web/components/: auth-guard.tsx  providers.tsx  theme-provider.tsx  trial-banner.tsx
apps/web/hooks/: useProgress.ts  useSubscription.ts
apps/web/lib/: api-client.ts  auth-context.tsx  auth.ts  metadata.ts  utils.ts
docker/: Dockerfile.api  Dockerfile.web
k8s/: api-deployment.yaml  api-hpa.yaml  ingress.yaml  web-deployment.yaml
(+66 files in other folders)
